<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21B1F3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/texte_de_bienvenue_dans_l_application_adress_e_l_utiliateur"
        android:padding="10dp"
        android:text="@string/bienvenue_dans_l_application"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/paraPerf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paraPerf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nom_de_l_application"
        android:padding="10dp"
        android:text="@string/para_perf"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/texteExplications"
        app:layout_constraintEnd_toEndOf="@+id/bienvenue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/bienvenue"
        app:layout_constraintTop_toBottomOf="@+id/bienvenue" />

    <EditText
        android:id="@+id/texteExplications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:background="@android:color/transparent"
        android:ems="23"
        android:gravity="start|top"
        android:hint="@string/texte_d_explication_de_l_application"
        android:inputType="textMultiLine"
        android:labelFor="@id/texteExplications"
        android:padding="10dp"
        android:text="@string/cette_application_vous_permet_de_visualiser_plus_facilement_les_donn_es_de_votre_test_sportif_synchronis_es_avec_la_vid_o_du_test"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/texteInvitation"
        app:layout_constraintEnd_toEndOf="@+id/paraPerf"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/paraPerf"
        app:layout_constraintTop_toBottomOf="@+id/paraPerf" />

    <EditText
        android:id="@+id/texteInvitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:background="@android:color/transparent"
        android:ems="23"
        android:gravity="start|top"
        android:hint="@string/texte_d_invitation_remplir_les_champs_donn_es_et_vid_os"
        android:inputType="textMultiLine"
        android:labelFor="@id/texteInvitation"
        android:padding="10dp"
        android:text="@string/veuillez_charger_un_fichier_excel_et_une_vid_o_dans_les_champs_correspondants"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/titreDonnees"
        app:layout_constraintEnd_toEndOf="@+id/texteExplications"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/texteExplications"
        app:layout_constraintTop_toBottomOf="@+id/texteExplications" />

    <TextView
        android:id="@+id/titreDonnees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/donn_es"
        android:padding="10dp"
        android:text="@string/donn_es"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/cheminDonnees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texteInvitation" />

    <EditText
        android:id="@+id/cheminDonnees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:autofillHints="true"
        android:background="@drawable/border"
        android:ems="23"
        android:gravity="start|top"
        android:hint="@string/donn_es"
        android:inputType="text"
        android:labelFor="@id/cheminDonnees"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/titreVideo"
        app:layout_constraintEnd_toEndOf="@+id/cheminVideo"
        app:layout_constraintEnd_toStartOf="@+id/boutonChargerDonnees"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreDonnees"
        />

    <Button
        android:id="@+id/boutonChargerDonnees"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/bouton_de_chargement_donn_es"
        android:padding="10dp"
        android:text="@string/charger"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cheminDonnees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cheminDonnees"
        app:layout_constraintTop_toTopOf="@+id/cheminDonnees"
        android:onClick="chargeDonnees"/>

    <TextView
        android:id="@+id/titreVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vid_o"
        android:padding="10dp"
        android:text="@string/vid_o"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/cheminVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheminDonnees" />

    <Button
        android:id="@+id/boutonChargerVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/bouton_de_chargement_de_la_vid_o"
        android:padding="10dp"
        android:text="@string/charger"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cheminVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cheminVideo"
        app:layout_constraintTop_toTopOf="@+id/cheminVideo"
        android:onClick="chargeVideo"/>

    <EditText
        android:id="@+id/cheminVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:autofillHints="true"
        android:background="@drawable/border"
        android:ems="23"
        android:gravity="start|top"
        android:hint="@string/vid_o"
        android:inputType="text"
        android:labelFor="@id/cheminVideo"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHighlight="#009688"
        android:textColorLink="#00BCD4"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/boutonCalculer"
        app:layout_constraintEnd_toStartOf="@+id/boutonChargerVideo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreVideo"
        />

    <Button
        android:id="@+id/boutonCalculer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bouton_qui_lance_le_calcul_du_graphique_et_l_affichage_de_la_vid_o"
        android:padding="20dp"
        android:text="@string/calculer"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheminVideo"
        android:onClick="calculeResultat"/>

</androidx.constraintlayout.widget.ConstraintLayout>